# CLog

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
.devcontainer/: devcontainer.json
CLog/src/: clog.h  clog_impl.h  configuration.h  level.h  logger.h  logger_impl.h  lwlog.h  registry.cpp  registry.h
CLog/src/details/: argument_format.h  argument_format_impl.h  bounded_queue.h  bounded_queue_impl.h  log_message.h  record.h  record_impl.h  source_meta.h  stream_writer.h  stream_writer_impl.h  topic.h
CLog/src/details/os/: datetime_utility.h  datetime_utility_impl.h  os.h  os_impl.h  time_point.h  time_point_impl.h
CLog/src/details/pattern/: alignment_formatter.cpp  alignment_formatter.h  attribute.cpp  attribute.h  color_format_data.h  flag_data.h  format_data.h  formatter.h  formatter_impl.h  formatters.h  pattern.cpp  pattern.h
CLog/src/interface/: logger_interface.h  logger_interface_impl.h  sink_interface.h
CLog/src/policy/: concurrency_policy.h  flush_policy.h  log_policy.h  log_policy_impl.h  threading_policy.h
CLog/src/sinks/: file_sink.h  http_sink.h  sink.h  sink_factory.h  sink_impl.h  stderr_sink.h  stdout_sink.h
Main/: Main.cpp  Main.vcxproj
